# textreward

./: .gitignore  LICENSE  README.md  base_config.yaml  colab_train_dqn.ipynb  train_dqn.py
Alfworld Results/: dqn_episodes.txt  dqn_parser.py  results_baseline.txt  train.py  train_dqn.py  train_dqn_zshot.py  utils.py
Alfworld Results/configs/: base_config.yaml
Alfworld Results/training/: test.json
Quadrotor Multidrone PPO/: MUJOCO_LOG.TXT  README.md  drone_run_1st.txt  drone_run_2nd.txt  pyproject.toml
Quadrotor Multidrone PPO/exp_tests/: mj_test.py  sb_test.py  vec_normalize.pkl
Quadrotor Multidrone PPO/quadrotor/: environment.py
Quadrotor Multidrone PPO/quadrotor/assets/: quadrotor.xml.rej  quadrotor1.txt  quadrotor1.xml  quadrotor2.txt  quadrotor2.xml  task.xml
